foundation_cms/static/scss/blocks/themes/default/impact_number_block.scss
@use "sass:map";

.impact-number-block {
  // ===================================
  // Variables
  // ===================================
  $stat-colors: (
    1: (
      "background-color": color(orange, "400"),
      "shape-color": color(blue, "200"),
    ),
    2: (
      "background-color": color(yellow, "200"),
      "shape-color": color(green, "200"),
    ),
    3: (
      "background-color": color(blue, "600"),
      "shape-color": color(orange, "200"),
    ),
  );
  $layout-breakpoint: medium;
  $digit-height: (
    small: get-text-property($header-styles, "h2", "line-height", "small"),
    large: get-text-property($header-styles, "h1", "line-height", "large"),
  );

  // ===================================
  // Base Styling
  // ===================================

  display: flex;
  flex-direction: column;

  @include breakpoint($layout-breakpoint up) {
    flex-direction: row;
  }

  .impact-stat {
    flex: 1;
    display: flex;
    justify-content: center;

    &__content {
      display: flex;
      flex-direction: row;
      width: 100%;

      @include breakpoint($layout-breakpoint up) {
        flex-direction: column;
      }
    }

    &__number {
      flex: 1;
      display: flex;
      justify-content: center;
      align-items: center;
      width: 100%;
      aspect-ratio: 1 / 1;
      background-repeat: no-repeat;
      background-position: center;
      background-size: 85% auto;

      @include breakpoint($layout-breakpoint up) {
        flex: unset;
      }
    }

    &__details {
      flex: 1;
      padding: rem-calc(8);
      display: flex;
      flex-direction: column;
      justify-content: center;

      @include breakpoint($layout-breakpoint up) {
        flex: unset;
      }

      @include breakpoint(large up) {
        padding: rem-calc(24);
        justify-content: normal;
      }
    }

    &__heading {
      margin: 0;

      @include apply-text-style(
        $header-styles,
        "h6",
        "small",
        $header-font-family
      );

      @include breakpoint(large up) {
        @include apply-text-style(
          $header-styles,
          "h5",
          "large",
          $header-font-family
        );
      }
    }

    &__description {
      margin-top: rem-calc(4);

      @include apply-text-style($body-text-styles, "xsmall", "small");

      @include breakpoint($layout-breakpoint up) {
        margin-top: 1rem;
      }

      @include breakpoint(large up) {
        @include apply-text-style($body-text-styles, "large", "large");
      }
    }

    &__digit-window {
      height: #{map.get($digit-height, small)}em;
      display: inline-block;

      @include apply-text-style(
        $header-styles,
        "h2",
        "small",
        $header-font-family
      );

      @include breakpoint(large up) {
        height: #{map.get($digit-height, large)}em;

        @include apply-text-style(
          $header-styles,
          "h1",
          "large",
          $header-font-family
        );
      }

      &--animated {
        overflow: hidden;
      }
    }

    &__digit {
      word-break: break-all;
      display: block;
      width: min-content;
      text-align: center;

      @include apply-text-style(
        $header-styles,
        "h2",
        "small",
        $header-font-family
      );

      @include breakpoint(large up) {
        @include apply-text-style(
          $header-styles,
          "h1",
          "large",
          $header-font-family
        );
      }

      &::before {
        content: attr(data-fake);
      }

      @for $i from 1 through 10 {
        &--#{$i} {
          animation: counting-small 0.4s steps(10) forwards;
          animation-iteration-count: #{$i * 2};
          animation-play-state: paused;

          @include breakpoint(large up) {
            animation-name: counting-large; // Use desktop animation on large screens
          }

          &.animate {
            animation-play-state: running;
          }
        }
      }
    }
  }

  .impact-stat:nth-child(3n + 1) {
    .impact-stat__number {
      background-color: map.get(map.get($stat-colors, 1), "background-color");
      background-image: url("../_images/shapes/blue/blue200-1.svg");
    }
  }

  .impact-stat:nth-child(3n + 2) {
    .impact-stat__number {
      background-color: map.get(map.get($stat-colors, 2), "background-color");
      background-image: url("../_images/shapes/green/green200-1.svg");
    }
  }

  .impact-stat:nth-child(3n + 3) {
    .impact-stat__number {
      background-color: map.get(map.get($stat-colors, 3), "background-color");
      background-image: url("../_images/shapes/orange/orange200-1.svg");
    }
  }

  @keyframes counting-small {
    100% {
      transform: translate3d(0, -#{map.get($digit-height, small) * 10}em, 0);
    }
  }

  @keyframes counting-large {
    100% {
      transform: translate3d(0, -#{map.get($digit-height, large) * 10}em, 0);
    }
  }
}

